--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
   
-  <div id="app">
-    <h1>{{ text }}</h1>
-  </div>
+  <div id="app"></div>
 
   <script src="dist/js/app.js"></script>
 </body>
