--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Vue App</title>
-  <link rel="stylesheet" href="dist/css/app.css">
+  <link rel="stylesheet" href="/dist/css/app.css">
 </head>
 <body>
   
   <div id="app"></div>
 
-  <script src="dist/js/app.js"></script>
+  <script src="/dist/js/app.js"></script>
 </body>
 </html>
